@@ -3,6 +3,8 @@
 	* coders/cals.c (ReadCALSImage): Silence Coverity 10086 "Unchecked
 	return value from library".
 	(ReadCALSImage): Silence Coverity 10085 "Unchecked return value".
+	(ReadCALSImage): Silence Coverity 10084 "Unchecked return value
+	from library".
 
 	* magick/enhance.c (ModulateImage): Silence Coverity 10087
 	"Unchecked return value".
